crates/turborepo-integration-tests/tests/snapshots/run_globs__cache_restore_output.snap
---
source: crates/turborepo-integration-tests/tests/run_globs.rs
expression: redact_globs_output(&result2.combined_output())
---
• Packages in scope: util
• Running build in 1 packages
• Remote caching disabled
util:build: cache hit, suppressing logs [HASH]

 Tasks:    1 successful, 1 total
Cached:    1 cached, 1 total
  Time: [TIME] >>> FULL TURBO

 WARNING  An issue occurred while attempting to parse [TEMP_DIR] Turborepo will still function, but some features may not be available:
   x Could not resolve workspaces.
  `-> Lockfile not found at [TEMP_DIR]
