crates/turborepo-integration-tests/tests/snapshots/run_globs__input_dir_first_run.snap
---
source: crates/turborepo-integration-tests/tests/run_globs.rs
expression: redact_globs_output(&result1.combined_output())
---
• Packages in scope: util
• Running build in 1 packages
• Remote caching disabled
util:build: cache miss, executing [HASH]

 Tasks:    1 successful, 1 total
Cached:    0 cached, 1 total
  Time: [TIME] 

 WARNING  An issue occurred while attempting to parse [TEMP_DIR] Turborepo will still function, but some features may not be available:
   x Could not resolve workspaces.
  `-> Lockfile not found at [TEMP_DIR]
